Bug 394668 - Reference image disappears after .kra file is saved
Summary: Reference image disappears after .kra file is saved
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Reference Images (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: joupent
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-25 13:16 UTC by Anna Medonosova
Modified: 2018-06-26 15:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
empty shape is shown after saving (52.28 KB, image/png)
2018-05-25 13:16 UTC, Anna Medonosova
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anna Medonosova 2018-05-25 13:16:27 UTC
Created attachment 112861 [details]
empty shape is shown after saving

Reference image disappears after .kra file is saved. The shape is still there, but it is empty. When I close and reopen the .kra file, the image is again visible until next save.

I tried both images embedded in .kra and linked from external file, it behaves the same way.

I have reproduced it on nightly appimages krita-4.1.0-pre-alpha-d70780c-x86_64 and krita-4.1.0-pre-alpha-4b4cd75-x86_64.


Steps to reproduce:

1, create a new file
2, add a reference image, either embedded or link to external
3, save
Comment 1 joupent 2018-06-06 11:37:32 UTC
Git commit bedc6c9b3c32262b4793cffd8f91aeeaa3ad68be by Jouni Pentikäinen.
Committed on 06/06/2018 at 11:36.
Pushed by jounip into branch 'master'.

Fix reference images disappearing when saving

M  +2    -1    libs/ui/flake/KisReferenceImagesLayer.cpp

https://commits.kde.org/krita/bedc6c9b3c32262b4793cffd8f91aeeaa3ad68be
Comment 2 Andrey 2018-06-26 15:02:23 UTC
Git commit 6a0dd7aa35de9677e381b5662029b589709d5e30 by Andrey Kamakin, on behalf of Jouni Pentikäinen.
Committed on 26/06/2018 at 14:18.
Pushed by akamakin into branch 'akamakin/T8628-multithreading-optimization'.

Fix reference images disappearing when saving

M  +2    -1    libs/ui/flake/KisReferenceImagesLayer.cpp

https://commits.kde.org/krita/6a0dd7aa35de9677e381b5662029b589709d5e30