Fix reference images disappearing when saving

BUG: 394668